2006-02-10  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin.

        - Inlined RefPtr assignment operators. .7% performance win on 
        super-accurate JS iBench.

        * kxmlcore/RefPtr.h:
        (KXMLCore::::operator):

2006-02-10  Geoffrey Garen  <ggaren@apple.com>

        No review needed, just a build fix. This time for sure.

        * kjs/JSType.h:

2006-02-10  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by eric.
        
        - Fixed build. As it goes without saying, I will not mention that I
        blame Kevin.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/JSImmediate.cpp:
        (KJS::JSImmediate::toObject):

2006-02-09  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by mjs.

        - Fixed <rdar://problem/4343730> Should switch ConstantValues (null, 
        undefined, true, false) from JS objects to immediate values similar to
        SimpleNumber

        2.0% performance gain on my new super-accurate version of JS iBench.
        (I promise to land a version of it soon.)

        The gist of the change:
        (1) The SimpleNumber class (simple_number.h) is now the JSImmediate
        class (JSImmediate.h/.cpp), and it handles not only numbers but also 
        null, undefined, true, and false. 
        (2) JSImmediate provides convenience methods for the bit masking
        necessary to encode and decode immediate values.
        (3) ConstantValues, BooleanImp, NullImp, and UndefinedImp are gone.
        (4) JSCell no longer implements functions like getBoolean, because
        only a JSImmediate can be a boolean.
        (5) JSImmediate no longer uses ALWAYS_INLINE because there's no need,
        and ALWAYS_INLINE is a non-portable option of last resort.
        (6) Type is now JSType, and it resides in its own file, JSType.h.
        Since I was there, I did some header include sorting as part of this
        change.

        The rest pretty much explains itself.
